[gd_scene load_steps=7 format=2]

[ext_resource path="res://Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://PanelBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://InventoryPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hrlm_3Card.gd" type="Script" id=5]
[ext_resource path="res://StatsPanel.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "FADE6"
length = 0.6
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Hrlm_3Card" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="." instance=ExtResource( 1 )]

[node name="Panel" parent="." instance=ExtResource( 2 )]

[node name="StatsPanel" parent="." instance=ExtResource( 7 )]

[node name="TextPanel" type="Panel" parent="."]
margin_top = 216.0
margin_right = 144.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextPanel"]
margin_left = 1.12372
margin_top = 0.749146
margin_right = 131.124
margin_bottom = 31.7491
text = "Pick a card, any card...

Find the lady, double your money.
Simple."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomButtons1" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 60.5
margin_right = 62.5
margin_bottom = 85.5
custom_constants/vseparation = 12
custom_constants/hseparation = 14
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="BottomButtons1"]
margin_right = 55.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="BottomButtons1"]
margin_left = 69.0
margin_right = 124.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Back"

[node name="GraphicsPanel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 12.0
margin_right = 134.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GraphicsPanel"]
margin_left = 2.0
margin_top = 14.0
margin_right = 42.0
margin_bottom = 54.0

[node name="WagerLbl" type="Label" parent="GraphicsPanel/VBoxContainer"]
margin_right = 40.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnsLbl" type="Label" parent="GraphicsPanel/VBoxContainer"]
margin_top = 16.0
margin_right = 40.0
margin_bottom = 28.0

[node name="ChoiceLbl" type="Label" parent="GraphicsPanel/VBoxContainer"]
margin_top = 32.0
margin_right = 40.0
margin_bottom = 44.0

[node name="StartContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = 15.0
margin_right = 47.0
margin_bottom = 30.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeginBtn" type="Button" parent="StartContainer"]
margin_right = 93.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "Begin"

[node name="WagerContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -8.0
margin_right = 47.0
margin_bottom = 53.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseWagerBtn" type="Button" parent="WagerContainer"]
margin_right = 93.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "Increase Wager"

[node name="DecreaseWagerBtn" type="Button" parent="WagerContainer"]
margin_top = 23.0
margin_right = 93.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 15 )
text = "Decrease Wager"

[node name="ConfirmBtn" type="Button" parent="WagerContainer"]
margin_top = 46.0
margin_right = 93.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 15 )
text = "Confirm"

[node name="CardChoiceContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -7.5
margin_right = 56.5
margin_bottom = 53.5
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CardChoiceContainer"]
margin_right = 113.0
margin_bottom = 40.0
alignment = 1

[node name="LeftCardBtn" type="Button" parent="CardChoiceContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 40 )
text = "Left"

[node name="MidCardBtn" type="Button" parent="CardChoiceContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 74.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 40 )
text = "Mid"

[node name="RightCardBtn" type="Button" parent="CardChoiceContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 113.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 40 )
text = "Right"

[node name="ConfirmBtn2" type="Button" parent="CardChoiceContainer"]
margin_top = 48.0
margin_right = 113.0
margin_bottom = 63.0
rect_min_size = Vector2( 113, 15 )
text = "Confirm"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 9.0
margin_top = 11.0
margin_right = 135.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 35.0
margin_right = 91.0
margin_bottom = 12.0
text = "The Sidewalk"

[node name="InventoryPanel" parent="." instance=ExtResource( 3 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE6 = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BottomButtons1/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="BottomButtons1/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="StartContainer/BeginBtn" to="." method="_on_BeginBtn_pressed"]
[connection signal="pressed" from="WagerContainer/IncreaseWagerBtn" to="." method="_on_IncreaseWagerBtn_pressed"]
[connection signal="pressed" from="WagerContainer/DecreaseWagerBtn" to="." method="_on_DecreaseWagerBtn_pressed"]
[connection signal="pressed" from="WagerContainer/ConfirmBtn" to="." method="_on_ConfirmBtn_pressed"]
[connection signal="pressed" from="CardChoiceContainer/HBoxContainer/LeftCardBtn" to="." method="_on_LeftCardBtn_pressed"]
[connection signal="pressed" from="CardChoiceContainer/HBoxContainer/MidCardBtn" to="." method="_on_MidCardBtn_pressed"]
[connection signal="pressed" from="CardChoiceContainer/HBoxContainer/RightCardBtn" to="." method="_on_RightCardBtn_pressed"]
[connection signal="pressed" from="CardChoiceContainer/ConfirmBtn2" to="." method="_on_ConfirmBtn2_pressed"]
